<resources>
    <string name="app_name">Rocas</string>
    <string name="buttonStart">¡Jugar!</string>
    <string name="textTitle">Rocas</string>
    <string name="buttonConfig">Configuración</string>
    <string name="buttonExit">Salir</string>
    <string name="buttonData">Datos adicionales</string>
    <string name="datos_adicionales">Datos adicionales</string>
    <string name="texto_largo">Programadora: Sílvia Gomera Boné.
        Fecha de creación: 06-06-2019</string>
    <string name="buscar">Buscar</string>
</resources>
