<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/configMenuItem"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/buttonConfig"
        app:showAsAction="never" />
    <item
        android:id="@+id/dataMenuItem"
        android:icon="@android:drawable/ic_menu_info_details"
        android:orderInCategory="20"
        android:title="@string/buttonData"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/searchMenuItem"
        android:icon="@android:drawable/ic_menu_search"
        android:orderInCategory="10"
        android:title="@string/buscar"
        app:showAsAction="always" />
</menu>